# waydrate

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/waydrate/: Cargo.toml
crates/waydrate-core/: Cargo.toml
crates/waydrate-core/src/: error.rs  lib.rs
crates/waydrate-core/src/entity/: config.rs  record.rs
crates/waydrate/src/: constants.rs  main.rs  styles.rs  utils.rs
crates/waydrate/src/cli/: handler.rs  types.rs
