[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["eeriemyxi myxi@duck.com"]

[workspace.dependencies]
sea-orm = { version = "2.0.0-rc", features = [ 
    "sqlx-sqlite", 
    "runtime-tokio-native-tls", 
    "macros", 
    "schema-sync",   
    "entity-registry",
    "debug-print"
] }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1.0.102"
platform-dirs = "0.3.0"
once_cell = "1.21.4"
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
thiserror = "2.0"
notify = "8.1.0"
