[package]
name = "waydrate"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
waydrate-core = { workspace = true }
sea-orm = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
platform-dirs = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
